[metadata]
name = lyricsfinder
version = attr: lyricsfinder.__info__.__version__
author = siku2
author_email = siku2@giesela.org
description = Retrieve lyrics from various websites
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/GieselaDev/LyricsFinder
keywords = lyrics
license = file: LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

    Intended Audience :: Developers
    Topic :: Multimedia :: Sound/Audio
    License :: OSI Approved :: MIT License

[options]
zip_safe = True
packages = find:
install_requires =
    beautifulsoup4
    requests

[options.packages.find]
include = lyricsfinder