[metadata]
name = lyricsfinder
version = 1.2.7
author = siku2
author_email = siku2@giesela.org
description = Retrieve lyrics from various websites
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/GieselaDev/LyricsFinder
keywords = lyrics
license = file: LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

    Intended Audience :: Developers
    Topic :: Multimedia :: Sound/Audio
    License :: OSI Approved :: MIT License

[options]
zip_safe = True
packages = find:
install_requires =
    beautifulsoup4==4.6.1
    requests

[options.packages.find]
include = lyricsfinder

[options.entry_points]
console_scripts =
    lyricsfinder = lyricsfinder.__main__:main