[metadata]
name = lyricsfinder
version = 2.1.0
author = siku2
author_email = siku2@giesela.org
description = Retrieve lyrics from various websites
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/GieselaDev/LyricsFinder
keywords = lyrics
license = file: LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

    Intended Audience :: Developers
    Topic :: Multimedia :: Sound/Audio
    License :: OSI Approved :: MIT License

[options]
zip_safe = True
packages = find:
install_requires =
    aiohttp
    beautifulsoup4
    lxml

[options.packages.find]
include = lyricsfinder*

[options.entry_points]
console_scripts =
    lyricsfinder = lyricsfinder.__main__:main